tags and markdown functionality

--- a/views/addpage.html
+++ b/views/addpage.html
@@ -17,6 +17,12 @@
         <label for="Body">Article Body:</label>
         <textarea class="form-control form-control-feedback" rows="8" name ="body" id="articlebody"></textarea>
     </div>
+
+    <div class="form-group has-success has-feedback">
+    <label for="Tags">tags:</label>
+    <input type="text" class="form-control form-control-feedback" name = "tags" id="articletags" placeholder="awesome cool rad ">
+    </div>
+
     <div class="subbtn">
         <button type="submit" class="btn btn-primary">Submit</button>
     </div>
