--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,3 +21,34 @@ footer p {
   font-size: 10px;
   opacity: 0.6;
 }
+.list-group-item{
+  margin-top:10px;
+  margin-bottom:5px;
+
+}
+.tags{
+
+  margin-left: 20px;
+  opacity: 0.7;
+}
+
+.tags:hover{
+
+  -webkit-animation-name: blinker;
+  -webkit-animation-duration: 2s;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+
+
+}
+@-webkit-keyframes blinker {
+  0% { opacity: 1.0; }
+  50% { opacity: 0.0; }
+  100% { opacity: 1.0; }
+}
+
+@keyframes blinker {
+  0% { opacity: 1.0; }
+  50% { opacity: 0.0; }
+  100% { opacity: 1.0; }
+}
