--- a/views/layout.html
+++ b/views/layout.html
@@ -17,11 +17,18 @@
   <div class = "container">
     <nav class="navbar navbar-inverse">
       <a class="navbar-brand" href="/">Wikistack</a>
+
+
+    <form method="post" action="/" class="navbar-form navbar-left" role="search">
+      <div class="form-group">
+        <input type="text" name ="tag_search" class="form-control" placeholder="search by tag">
+      </div>
+      <button type="submit" class="btn btn-default">Search</button>
+    </form>
     </nav>
+    {% block content %}{% endblock %}
 
-
-{% block content %}{% endblock %}
-  <footer>
+    <footer>
     <p>Alex and Roger Wikistack</p>
   </footer>
   </div>
