--- a/views/pages.html
+++ b/views/pages.html
@@ -3,7 +3,16 @@
 {% block title %}WikiStack -{{doc[0].title}}{% endblock %}
 
 {% block content %}
-<h2>{{doc[0].title}}</h2>
-<hr>
-<p>{{doc[0].body}}</p>
+
+    {% for d in doc %}
+        <h1>{{d.title}}</h1>
+        <hr>
+        <p>{{d.body | markedown}}</p>
+
+        <span class ="tags">tags:</span>
+        {% for tag in d.tags %}
+            <a href ="{{d.full_url}}"><small>{{tag}}</small></a>
+        {% endfor %}
+    {% endfor %}
+
 {% endblock %}
